@@ -1,5 +1,12 @@
 2003-03-14  Alexandre Oliva  <aoliva@redhat.com>
 
+	* sysdeps/mips/memcpy.S: Map t0-3 to a4-7 on new abis.
+	* sysdeps/mips/memset.S: Likewise.
+	* sysdeps/mips/sys/regdef.h: Alias a4-7 or t0-3 to $8-11
+	depending on the ABI.
+
+2003-03-14  Alexandre Oliva  <aoliva@redhat.com>
+
 	* sysdeps/mips/atomicity.h (exchange_and_add, atomic_add):
 	Don't .set mips2 on new abi.
 	(compare_and_swap): Likewise.  Support 64-bit longs on n64.
